# rate-limiter

./: .env  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  main.py  plot.py  pyproject.toml  rate_limiters.py
config/prometheus/: prometheus-test.yml  prometheus.yml
src/: api.py  rate_limiters.py  run.py
test/: load_test.py
tests/: test_rate_limiters.py
