[tool.poetry]
name = "rate-limiter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rate_limiter"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
prometheus-fastapi-instrumentator = "^6.0.0"
locust = "^2.15.1"
redis = {extras = ["hiredis"], version = "^4.5.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
